# QtQuickProjectTemplate

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/app/: CMakeLists.txt  application.cpp  application.h  main.cpp
src/core/: CMakeLists.txt
src/ui/: CMakeLists.txt  Main.qml
